--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.firebaseui:firebase-ui:0.6.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
