--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.anh.anhnguyen_pset6">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-sdk tools:overrideLibrary="com.firebase.ui.auth, com.firebase.ui" />
 
@@ -20,7 +21,8 @@
         </activity>
         <activity android:name=".SearchActivity" />
         <activity android:name=".FavoriteActivity" />
-        <activity android:name=".SearchFoundActivity"></activity>
+        <activity android:name=".SearchFoundActivity" />
+        <activity android:name=".ArtInfoActivity"></activity>
     </application>
 
 </manifest>
